Update creator text in index.html

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             
             <div id="creator-text-container" class="mb-4 text-center">
                 <span id="creator-text" class="text-xl md:text-3xl font-black tracking-widest transition-colors duration-500">
-                    Creator by មាស ប៊ុណ្ណាវីត
+                    Creator by VID+KDOA🐭
                 </span>
             </div>
 
