Update class schedule times for each day

--- a/index.html
+++ b/index.html
@@ -223,12 +223,12 @@
 
         // Key: Day of the week (0=Sunday, 1=Monday, ..., 6=Saturday)
         const SCHEDULE_DATA = {
-            1: { dayKh: "ថ្ងៃចន្ទ", classes: [{ subject: "អង់គ្លេស", time: "13:00 > 14:00" }, { subject: "ប្រវត្តិវិទ្យា", time: "14:00 > 15:00" }, { subject: "គណិតវិទ្យា", time: "15:00 > 17:00" }] },
-            2: { dayKh: "ថ្ងៃអង្គារ", classes: [{ subject: "ភាសាខ្មែរ", time: "13:00 > 14:00" }, { subject: "អង់គ្លេស", time: "14:00 > 15:00" }, { subject: "ផែនដីវិទ្យា", time: "15:00 > 16:00" }, { subject: "ភូមិវិទ្យា", time: "16:00 > 17:00" }] },
-            3: { dayKh: "ថ្ងៃពុធ", classes: [{ subject: "គណិតវិទ្យា", time: "13:00 > 15:00" }, { subject: "គីមីវិទ្យា", time: "15:00 > 16:00" }, { subject: "ជីវវិទ្យា", time: "16:00 > 17:00" }] },
-            4: { dayKh: "ថ្ងៃព្រហស្បតិ៍", classes: [{ subject: "ភាសាខ្មែរ", time: "13:00 > 15:00" }, { subject: "ភូមិវិទ្យា", time: "15:00 > 16:00" }, { subject: "ជីវវិទ្យា", time: "16:00 > 17:00" }] },
-            5: { dayKh: "ថ្ងៃសុក្រ", classes: [{ subject: "ភាសាខ្មែរ", time: "13:00 > 15:00" }, { subject: "សីលធម៌ ពលរដ្ឋ", time: "15:00 > 16:00" }, { subject: "រូបវិទ្យា", time: "16:00 > 17:00" }] },
-            6: { dayKh: "ថ្ងៃសៅរ៍", classes: [{ subject: "ភូមិវិទ្យា", time: "13:00 > 14:00" }, { subject: "គណិតវិទ្យា", time: "14:00 > 16:00" }] },
+            1: { dayKh: "ថ្ងៃចន្ទ", classes: [{ subject: "អង់គ្លេស", time: "07:00 > 08:00" }, { subject: "ប្រវត្តិវិទ្យា", time: "08:00 > 09:00" }, { subject: "គណិតវិទ្យា", time: "09:00 > 11:00" }] },
+            2: { dayKh: "ថ្ងៃអង្គារ", classes: [{ subject: "ភាសាខ្មែរ", time: "07:00 > 08:00" }, { subject: "ចិន", time: "08:00 > 09:00" }, { subject: "ផែនដីវិទ្យា", time: "09:00 > 10:00" }, { subject: "ភូមិវិទ្យា", time: "10:00 > 11:00" }, { subject: "កសិកម្ម", time: "14:00 > 16:00" }] },
+            3: { dayKh: "ថ្ងៃពុធ", classes: [{ subject: "គណិតវិទ្យា", time: "07:00 > 09:00" }, { subject: "គីមីវិទ្យា", time: "09:00 > 10:00" }, { subject: "ជីវវិទ្យា", time: "10:00 > 11:00" }] }, { subject: "សិល្បះ", time: "14:00 > 15:00" }] }, { subject: "អប់រំកាយកីឡា", time: "15:00 > 17:00" }] },
+            4: { dayKh: "ថ្ងៃព្រហស្បតិ៍", classes: [{ subject: "ភាសាខ្មែរ", time: "07:00 > 08:00" }, { subject: "ជីវវិទ្យា", time: "10:00 > 11:00" }] }, { subject: "បណ្ណាល័យ", time: "13:00 > 14:00" }] }, { subject: "គេហវិទ្យា", time: "15:00 > 17:00" }] },
+            5: { dayKh: "ថ្ងៃសុក្រ", classes: [{ subject: "ភាសាខ្មែរ", time: "07:00 > 09:00" }, { subject: "សីលធម៌ ពលរដ្ឋ", time: "09:00 > 10:00" }, { subject: "រូបវិទ្យា", time: "10:00 > 11:00" }] },
+            6: { dayKh: "ថ្ងៃសៅរ៍", classes: [{ subject: "ភូមិវិទ្យា", time: "07:00 > 08:00" }, { subject: "គណិតវិទ្យា", time: "08:00 > 10:00" }] }, { subject: "អង់គ្លេស", time: "10:00 > 11:00" }] }, { subject: "ភាសាបារាំង", time: "13:00 > 15:00" }] },
             0: { dayKh: "ថ្ងៃអាទិត្យ", classes: [{ subject: "រីករាយថ្ងៃឈប់សម្រាក!", time: "ពេញមួយថ្ងៃ" }] }
         };
 
